--- a/output/team.html
+++ b/output/team.html
@@ -27,79 +27,53 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">anj</h2>
+        <h2 class="card-title">Anjini</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item"><i class="fas fa-id-card-alt"></i> ID: qw</li>
-            <li class="list-group-item"><i class="far fa-envelope"></i> Email: <a href="mailto:ank">ank</a></li>
-            <li class="list-group-item"><i class="fas fa-building"></i> Office number: 12</li>
+            <li class="list-group-item"><i class="fas fa-id-card-alt"></i> ID: 01</li>
+            <li class="list-group-item"><i class="far fa-envelope"></i> Email: <a href="mailto:anjini.krishnan@hormail.com">anjini.krishnan@hormail.com</a></li>
+            <li class="list-group-item"><i class="fas fa-building"></i> Office number: 101</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">12</h2>
+        <h2 class="card-title">Jessica</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item"><i class="fas fa-id-card-alt"></i> ID: nn</li>
-            <li class="list-group-item"><i class="far fa-envelope"></i> Email: <a href="mailto:12">12</a></li>
-            <li class="list-group-item"><i class="fab fa-github"></i> GitHub: <a href="https://github.com/N" target="_blank" rel="noopener noreferrer">N</a></li>
+            <li class="list-group-item"><i class="fas fa-id-card-alt"></i> ID: 02</li>
+            <li class="list-group-item"><i class="far fa-envelope"></i> Email: <a href="mailto:jess@something.com">jess@something.com</a></li>
+            <li class="list-group-item"><i class="fab fa-github"></i> GitHub: <a href="https://github.com/anjkrish2608" target="_blank" rel="noopener noreferrer">anjkrish2608</a></li>
         </ul>
     </div>
 </div>
 ,<div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">`QA	</h2>
+        <h2 class="card-title">Sarah</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item"><i class="fas fa-id-card-alt"></i> ID: As</li>
-            <li class="list-group-item"><i class="far fa-envelope"></i> Email: <a href="mailto:12">12</a></li>
-            <li class="list-group-item"><i class="fab fa-github"></i> GitHub: <a href="https://github.com/sd" target="_blank" rel="noopener noreferrer">sd</a></li>
-        </ul>
-    </div>
-</div>
-,<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">3edw</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item"><i class="fas fa-id-card-alt"></i> ID: 2</li>
-            <li class="list-group-item"><i class="far fa-envelope"></i> Email: <a href="mailto:"></a></li>
-            <li class="list-group-item"><i class="fab fa-github"></i> GitHub: <a href="https://github.com/w" target="_blank" rel="noopener noreferrer">w</a></li>
+            <li class="list-group-item"><i class="fas fa-id-card-alt"></i> ID: 03</li>
+            <li class="list-group-item"><i class="far fa-envelope"></i> Email: <a href="mailto:sarah@something.com">sarah@something.com</a></li>
+            <li class="list-group-item"><i class="fab fa-github"></i> GitHub: <a href="https://github.com/sarah" target="_blank" rel="noopener noreferrer">sarah</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">12</h2>
+        <h2 class="card-title">Tom</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item"><i class="fas fa-id-card-alt"></i> ID: AS</li>
-            <li class="list-group-item"><i class="far fa-envelope"></i> Email: <a href="mailto:1">1</a></li>
-            <li class="list-group-item"><i class="fas fa-graduation-cap"></i> School: 1</li>
-        </ul>
-    </div>
-</div>
-,<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">21wsas</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item"><i class="fas fa-id-card-alt"></i> ID: 1</li>
-            <li class="list-group-item"><i class="far fa-envelope"></i> Email: <a href="mailto:was">was</a></li>
-            <li class="list-group-item"><i class="fas fa-graduation-cap"></i> School: 2</li>
+            <li class="list-group-item"><i class="fas fa-id-card-alt"></i> ID: 04</li>
+            <li class="list-group-item"><i class="far fa-envelope"></i> Email: <a href="mailto:tom@tom.com">tom@tom.com</a></li>
+            <li class="list-group-item"><i class="fas fa-graduation-cap"></i> School: Saint Peters College</li>
         </ul>
     </div>
 </div>
